--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
  </head>
  <body>
   <h3>Tigers</h3>
-  <img src="tiger-1975790_1280.jpg" alt="Tiger in the snow"width="1920px" height="1295px">
+  <img src="tiger-1975790_1280.jpg" alt="Tiger in the snow" width="1920px" height="1295px">
   <img src="tiger-grass.jpg" alt="Tiger in the grass">
+  <img src="animal-g85aa6560b_340.jpg" alt="White tiger" width="1920px" height="1295px">
  </body>
 </html>
