--- a/Root Directory/index.html
+++ b/Root Directory/index.html
@@ -3,8 +3,11 @@
 <head>
  <meta charset="utf-8">
  <title>Tigers photo</title>
- </head>
-   <body>
-     abc
-   </body>
- </html>
+</head>
+ <body>
+  <h3>Tigers</h3>
+  <img src="tiger-1975790_1280.jpg" alt="Tiger in the snow" width="1920px" height="1295px">
+  <img src="tiger-grass.jpg" alt="Tiger in the grass">
+  <img src="animal-g85aa6560b_340.jpg" alt="White tiger" width="1920px" height="1295px">
+ </body>
+</html>
