--- a/Root Directory/Forms/MathTestForm.html
+++ b/Root Directory/Forms/MathTestForm.html
@@ -1,1 +1,52 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Math test form</title>
+    </head>
+    <body>
+        <!--Start of the test-->
+        <form>
+            Name:<br/>
+            <input type="text" placeholder="Enter your full Name"><br/>
+            Q1&ndash;3 is multiple choice question. Choose the right answer.<br/><br/>
+            Q1:1&plus;2&times;3<br/>
+            <select>
+                <option>6</option>
+                <option selected>7</option>
+                <option>8</option>
+            </select><br/><br/>
+            Q2:5&minus;25&divide;5<br/>
+            <selected>
+                <option selected>0</option>
+                <option>4</option>
+                <option>2</option>
+            </selected><br/><br/>
+            Q3:9&times;2&divide;3<br/>
+            <selected>
+                <option>3</option>
+                <option>5</option>
+                <option selected>6</option>
+            </selected><br/><br/>
+            </fieldset>
+            Q4&ndash;6 is a word problem. Write the correct word in the text area.<br/><br/>
+            Q4:Bob solved this problem. Is his answer correct? If not, write why is he wrong too.<br/><br/>
+            1&plus;5&times;4<br/>
+            Bob's answer:24<br/><br/>
+            Text here:<br/>
+            <textarea></textarea><br/><br/>
+            Q5:Bob solved this problem. Is his answer correct? If not, write why is he wrong too.<br/><br/>
+            What is the square root(s) of 5?<br/>
+            Bob's answer:&radic;5<br/><br/>
+            Text here:<br/>
+            <textarea></textarea><br/><br/>
+            Q6:Bob solved this problem. Is his answer correct? If not, write why is he wrong too.<br/><br/>
+            &radic;2&plus;&radic;2&minus;&radic;2<br/>
+            Bob's answer:2&plus;&radic;2<br/><br/>
+            Text here:<br/>
+            <textarea></textarea><br/><br/>
+            <!--End of the test-->
+            <button type="submit">Submit</button>
+        </form>
+    </body>
+</html>
