--- a/Root Directory/Forms/MathTestForm.html
+++ b/Root Directory/Forms/MathTestForm.html
@@ -17,17 +17,17 @@
                 <option>8</option>
             </select><br/><br/>
             Q2:5&minus;25&divide;5<br/>
-            <selected>
+            <select>
                 <option selected>0</option>
                 <option>4</option>
                 <option>2</option>
-            </selected><br/><br/>
+            </select><br/><br/>
             Q3:9&times;2&divide;3<br/>
-            <selected>
+            <select>
                 <option>3</option>
                 <option>5</option>
                 <option selected>6</option>
-            </selected><br/><br/>
+            </select><br/><br/>
             </fieldset>
             Q4&ndash;6 is a word problem. Write the correct word in the text area.<br/><br/>
             Q4:Bob solved this problem. Is his answer correct? If not, write why is he wrong too.<br/><br/>
