--- a/Root Directory/Color Scheme/ColorSchemeOfPeacock.html
+++ b/Root Directory/Color Scheme/ColorSchemeOfPeacock.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Color Scheme of Peacock</title>
+    </head>
+    <body>
+        <img src="1000_F_27836858_ylSncbb6kp1kNjOuQecSshEq1Xi6wTqk.jpg" alt="Peacock"/>
+        <style>
+            table,tr,td{border: 1px solid black;
+            }
+        </style>
 
+        <table>
+            <tr>
+                <td colspan="8" style="text-align: center; font-family:Impact, fantasy;">Peacock</p></td>
+            </tr>
+            <tr>
+                <td style="background-color:rgb(65,105,225); color:#ffffff;" colspan="2" style="text-align: center;">Royal Blue</td>
+                <td style="background-color:rgb(60,179,113); color:#ffffff;" colspan="2" style="text-align: center;">Medium Sea Green</td>
+                <td style="background-color:rgb(123,63,0); color:#ffffff;" colspan="2" style="text-align: center;">Chocolate</td>
+                <td style="background-color:rgb(0,0,0); color:#ffffff;" colspan="2" style="text-align: center;">Black</td>
+            </tr>
+            <tr>
+                <td colspan="2" style="text-align: center;">[hex]#4169E1</td>
+                <td colspan="2" style="text-align: center;">[hex]#3cb371</td>
+                <td colspan="2" style="text-align: center;">[hex]#7B3F00</td>
+                <td colspan="2" style="text-align: center;">[hex]#000000</td>
+            </tr>
+            <tr>
+                <td colspan="2" style="text-align: center;">[rgb]65,105,225</td>
+                <td colspan="2" style="text-align: center;">[rgb]60,179,113</td>
+                <td colspan="2" style="text-align: center;">[rgb]123,63,0</td>
+                <td colspan="2" style="text-align: center;">[rgb]0,0,0</td>
+            </tr>
+            <tr>
+                <td colspan="2" style="text-align: center;">[hsl]225°,73%,57%</td>
+                <td colspan="2" style="text-align: center;">[hsl]147°,50%,47%</td>
+                <td colspan="2" style="text-align: center;">[hsl]31°,100%,24%</td>
+                <td colspan="2" style="text-align: center;">[hsl]0°,0%,0%</td>
+            </tr>
+        </table>
+    </body>
+</html>
