--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Restaurant Menu</title>
+    </head>
+    <body>
+        <div style="width:120px; height:120px; padding-left:10px; padding-right:10px; background-color:#97e2f5; margin-left:20px; margin-right:20px; border-style:solid; border-width:thin; border-bottom:#56aec4; background-position:top center;">
+            <img src="morning_background.jpg" alt="image" />
+         </div>
+    </body>
+</html>
