--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,8 +5,8 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:120px; height:120px; padding-left:10px; padding-right:10px; background-color:#97e2f5; margin-left:20px; margin-right:20px; border-style:solid; border-width:thin; border-bottom:#56aec4; background-position:top center;">
-            <img src="morning_background.jpg" alt="image" />
+        <div style="width:120px; height: 120px; padding-left: 10px; padding-right: 10px; background-color: #00ffff; margin:20px">
+            <img src="morning_background.jpg" alt="image">
          </div>
     </body>
 </html>
