--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,8 +5,6 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:60px; height: 60px; padding-left: 10px; padding-right: 10px; background-color: #00ffff; margin:20px">
-            <img src="morning_background.jpg" alt="image">
-         </div>
+        <div style="width:100%; height:70px; background-image:url('morning_background.jpg'); background-position:center center"></div>
     </body>
 </html>
