--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,6 +5,8 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:100%; height:70px; background-image:url('morning_background.jpg'); background-position:center center"></div>
+        <div style="width:400px; height:70px; background-image:url('morning_background.jpg'); background-position:center-center">
+            <p>Breakfast Menu</p>
+        </div>
     </body>
 </html>
