--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div style="width:400px; height:70px; background-image:url('morning_background.jpg'); background-position:center-center">
-            <p>Breakfast Menu</p>
+            <h2 style="text-align: center;">Breakfast Menu</h2>
         </div>
     </body>
 </html>
