--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,11 +5,11 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height:550px; background-image:url('morning_background.jpg');">
-            <h1 style="text-align: center; padding: 20px; margin:20px; border-style:solid; border-width:thin;">
+        <div style="width:400px; height:550px; background-color:white; url('morning_background.jpg');">
+            <h1 style="text-align: center; padding: 20px; margin:20px; border-style:solid; border-width:thin; border-color:aliceblue;">
                 Breakfast Menu
             </h1>
-            <h2>Main Menu</h2>
+            <h2 style="text-align: center; padding: 20px; margin:20px; border-style:solid; border-width:thin; border-color:aliceblue;">Main Menu</h2>
             <ol>
                 <li>pork sausage</li>
                 <li>Smoked bacon</li>
