--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,7 +5,7 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height:550px; background-color:white; url('morning_background.jpg');">
+        <div style="width:400px; height:550px; background-image:('morning_background.jpg');">
             <h1 style="text-align: center; padding: 20px; margin:20px; border-style:solid; border-width:thin; border-color:aliceblue;">
                 Breakfast Menu
             </h1>
