--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <div style="width:400px; height:550px; background-image:('morning_background.jpg');">
-            <h1 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:aliceblue;">
+            <h1 style="text-align: center; padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">
                 Breakfast Menu
             </h1>
-            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:aliceblue;">Main Menu</h2>
+            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">Main Menu</h2>
             <ol>
                 <li>pork sausage</li>
                 <li>Smoked bacon</li>
