--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,8 +5,8 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height:550px; background-image:('morning_background.jpg');" background-repeat:repeat-x>
-            <h1 style="text-align: center; padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">
+        <div style="width:400px; height:550px; background-image:('morning_background.jpg'); background-repeat:repeat-x;"">
+            <h1 style="text-align: center; padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
                 Breakfast Menu
             </h1>
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">Main Menu</h2>
