--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,7 +5,7 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height:550px; background-image:('morning_background.jpg'); background-repeat:repeat-x;"">
+        <div style="width:400px; height:550px; background-image:('morning_background.jpg'); background-repeat:repeat-x;">
             <h1 style="text-align: center; padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
                 Breakfast Menu
             </h1>
