--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,8 +5,7 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:100%; height:70px; background-image:url('morning_background.jpg'); background-position:center center"></div>
-        <div style="width:400px; height:70px; background-image:url('morning_background.jpg'); background-position:center-center">
+        <div style="width:400px; height:550px; background-image:url('morning_background.jpg'); background-repeat:repeat-x">
             <p>Breakfast Menu</p>
         </div>
     </body>
