--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,8 +5,24 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height:550px; background-image:url('morning_background.jpg'); background-repeat:repeat-x">
-            <p>Breakfast Menu</p>
+        <div style="width:400px; height:100px; background-image:('morning_background.jpg');">
+            <h1 style="text-align: center; padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
+                Breakfast Menu
+            </h1>
+            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">Main Menu</h2>
+            <ol>
+                <li>pork sausage</li>
+                <li>Smoked bacon</li>
+                <li>Roasted tomato</li>
+                <li>Fried egg</li>
+            </ol>
+            <h2>Drink Menu</h2>
+            <ol>
+                <li>Orange juice</li>
+                <li>Water</li>
+                <li>Tea</li>
+                <li>Earl grey</li>
+            </ol>
         </div>
     </body>
 </html>
