--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -6,23 +6,23 @@
     </head>
     <body>
         <div style="width:400px; height:100px; background-image:('morning_background.jpg');">
-            <h1 style="text-align: center; padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
+            <h1 style="padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
                 Breakfast Menu
             </h1>
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">Main Menu</h2>
-            <ol>
+            <ul>
                 <li>pork sausage</li>
                 <li>Smoked bacon</li>
                 <li>Roasted tomato</li>
                 <li>Fried egg</li>
-            </ol>
+            </ul>
             <h2>Drink Menu</h2>
-            <ol>
+            <ul>
                 <li>Orange juice</li>
                 <li>Water</li>
                 <li>Tea</li>
                 <li>Earl grey</li>
-            </ol>
+            </ul>
         </div>
     </body>
 </html>
