--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,7 +5,7 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height:100px; background-image:url('morning_background.jpg');">
+        <div style="width:400px; height:55px; background-image:url('morning_background.jpg'); background-repeat: repeat;">
             <h1 style="padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
                 Breakfast Menu
             </h1>
