--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <div style="width:400px; height:55px; background-image:url('morning_background.jpg'); background-repeat: repeat;">
-            <h1 style="padding-top: 10px; margin-bottom:5px; border-style:solid; border-width:thin;">
+            <h1 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
                 Breakfast Menu
             </h1>
-            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:rgb(255, 255, 255);">Main Menu</h2>
+            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h2>
             <ul>
                 <li>pork sausage</li>
                 <li>Smoked bacon</li>
