--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -11,17 +11,17 @@
             </h1>
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h2>
             <ul>
-                <li>pork sausage</li>
-                <li>Smoked bacon</li>
-                <li>Roasted tomato</li>
-                <li>Fried egg</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">pork sausage</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Smoked bacon</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Roasted tomato</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Fried egg</li>
             </ul>
-            <h2>Drink Menu</h2>
+            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Drink Menu</h2>
             <ul>
-                <li>Orange juice</li>
-                <li>Water</li>
-                <li>Tea</li>
-                <li>Earl grey</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Orange juice</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Water</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Tea</li>
+                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Earl grey</li>
             </ul>
         </div>
     </body>
