--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -10,19 +10,15 @@
                 Breakfast Menu
             </h1>
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h2>
-            <ul>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">pork sausage</li>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Smoked bacon</li>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Roasted tomato</li>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Fried egg</li>
-            </ul>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Pork sausage $5</p>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Smoked bacon $5</p>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Roasted tomato $5</p>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Fried egg $5</p>
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Drink Menu</h2>
-            <ul>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Orange juice</li>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Water</li>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Tea</li>
-                <li style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Earl grey</li>
-            </ul>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Orange juice $4</p>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Water $4</p>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Tea $4</p>
+                <p style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Earl grey $4</p>
         </div>
     </body>
 </html>
