--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,16 +5,16 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:40px; height: 55px;px; background-image:url('morning_background.jpg'); background-repeat: repeat;">
-            <h1 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
+        <div style="width:400px; height: 550px; background-image:url('morning_background.jpg'); background-repeat: repeat;">
+            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
                 Breakfast Menu
-            </h1>
-            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h2>
+            </h2>
+            <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h3>
                 <p style="text-align: center;">Pork sausage $5</p>
                 <p style="text-align: center;">Smoked bacon $5</p>
                 <p style="text-align: center;">Roasted tomato $5</p>
                 <p style="text-align: center;">Fried egg $5</p>
-            <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Drink Menu</h2>
+            <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Drink Menu</h3>
                 <p style="text-align: center;">Orange juice $4</p>
                 <p style="text-align: center;">Water $4</p>
                 <p style="text-align: center;">Tea $4</p>
