--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,11 +5,10 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height: 550px; background-image:url('morning_background.jpg'); background-repeat: repeat;">
+        <div style="width:400px; height: 550px; color:white; background-image:url('morning_background.jpg'); background-repeat: repeat;">
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
                 Breakfast Menu
             </h2>
-        </div>
             <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h3>
                 <p style="text-align: center;">Pork sausage $5</p>
                 <p style="text-align: center;">Smoked bacon $5</p>
@@ -20,5 +19,6 @@
                 <p style="text-align: center;">Water $4</p>
                 <p style="text-align: center;">Tea $4</p>
                 <p style="text-align: center;">Earl grey $4</p>
+        </div>
     </body>
 </html>
