--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -5,7 +5,7 @@
         <title>Restaurant Menu</title>
     </head>
     <body>
-        <div style="width:400px; height: 550px; color:white; background-image:url('morning_background.jpg'); background-repeat: repeat;">
+        <div style="width:400px; height: 550px; background-image:url('morning_background.jpg'); background-repeat: repeat;">
             <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
                 Breakfast Menu
             </h2>
