--- a/Root Directory/Restaurant Menu/MenuAssignment.html
+++ b/Root Directory/Restaurant Menu/MenuAssignment.html
@@ -20,5 +20,35 @@
                 <p style="text-align: center;">Tea $4</p>
                 <p style="text-align: center;">Earl grey $4</p>
         </div>
+        <div style="width:400px; height:550px; background-image:url('lunch_background.jpg'); background-repeat: repeat;">
+        <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
+                Lunch Menu
+            </h2>
+            <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h3>
+                <p style="text-align: center;">BLT $5</p>
+                <p style="text-align: center;">Cajun Chiken $5</p>
+                <p style="text-align: center;">Smoked Salmon $5</p>
+                <p style="text-align: center;">Egg&Chip $5</p>
+            <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Drink Menu</h3>
+                <p style="text-align: center;">Orange juice $4</p>
+                <p style="text-align: center;">Water $4</p>
+                <p style="text-align: center;">Tea $4</p>
+                <p style="text-align: center;">Soda $4</p>
+        </div>
+        <div style="color:white; width:400px; height:550px; background-image:url('dinner_background.jpg'); background-repeat: repeat;">
+        <h2 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">
+                Dinner Menu
+            </h2>
+            <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Main Menu</h3>
+                <p style="text-align: center;">Roasted Octopus $5</p>
+                <p style="text-align: center;">Lobster Paella $5</p>
+                <p style="text-align: center;">Fettuccine Bolognase $5</p>
+                <p style="text-align: center;">Mac n Cheese $5</p>
+            <h3 style="text-align: center; padding: 10px; margin:5px; border-style:solid; border-width:thin; border-color:white;">Drink Menu</h3>
+                <p style="text-align: center;">Orange juice $4</p>
+                <p style="text-align: center;">Cola $4</p>
+                <p style="text-align: center;">Tea $4</p>
+                <p style="text-align: center;">Lemonade $4</p>
+        </div>
     </body>
 </html>
