--- a/Root Directory/Team Page/B_team.html
+++ b/Root Directory/Team Page/B_team.html
@@ -5,7 +5,7 @@
         <title>B-team</title>
     </head>
     <body>
-        <p style="background-color:#ebb114; color:#ffffff; font-size:25px; text-align:center; margin:auto;">
+        <p style="background-color:#75ce6d; color:#ffffff; font-size:25px; text-align:center; margin:auto;">
             Member of B-team
         </p>
         <img src="pug-8632718_1280" alt="Pug in pink" style="float:left; position:relative; right:10px;"/>
@@ -24,5 +24,10 @@
         <p>
             Cat always looks grumpy but, actually she isn't. Her favorite thing to do is to sit and watch movies.
         </p>
+        <div style="display:none; height:30px;">hidden</div>
+        <p style="background-color:#75ce6d; color:#ffffff; font-size:25px; text-align:center; margin:auto;">
+            Find out more about B-team
+        </p>
+        <p>click <a href="">here</a>to know more about B-team.</p>
     </body>
 </html>
