--- a/Root Directory/Team Page/B_team.html
+++ b/Root Directory/Team Page/B_team.html
@@ -8,19 +8,19 @@
         <p style="background-color:#75ce6d; color:#ffffff; font-size:25px; text-align:center; margin:auto;">
             Member of B-team
         </p>
-        <img src="pug-8632718_1280" alt="Pug in pink" style="float:left; position:relative; left:10px;"/>
+        <img src="pug-8632718_1280.jpg" alt="Pug in pink" style="float:left; position:relative; right:10px;"/>
         <p>
             Pug is the leader of the B-team. He loves pink and always wears pink sunglasses and pink bowtie.
         </p>
-        <img src="squirrel-8064275_960_720" alt="Squirrel eating" style="float:left; position:relative; left:10px;"/>
+        <img src="squirrel-8064275_960_720.jpg" alt="Squirrel eating" style="float:left; position:relative; right:10px;"/>
         <p>
             Squirrel is the smallest in the B-team. He likes to eat and his favorite food is nuts.
         </p>
-        <img src="duck-5381071_1280" alt="Duck's head" style="float:left; position:relative; left:10px;"/>
+        <img src="duck-5381071_1280.jpg" alt="Duck's head" style="float:left; position:relative; right:10px;"/>
         <p>
             Duck is the largest in the B-team. He usually quacks and walk around. Nobody knows what he is thinking.
         </p>
-        <img src="cat-2934720_1280" alt="Cat sitting" style="float:left; position:relative; left:10px;"/>
+        <img src="cat-2934720_1280.jpg" alt="Cat sitting" style="float:left; position:relative; right:10px;"/>
         <p>
             Cat always looks grumpy but, actually she isn't. Her favorite thing to do is to sit and watch movies.
         </p>
