--- a/Root Directory/Team Page/B_team.html
+++ b/Root Directory/Team Page/B_team.html
@@ -9,19 +9,19 @@
             Member of B-team
         </p>
         <img src="pug-8632718_1280.png" alt="Pug in pink" width="74px" height="74px" style="float:left; position:relative; right:10px;"/>
-        <p>
+        <p style="padding:bottom 10px;">
             Pug is the leader of the B-team. He loves pink and always wears pink sunglasses and pink bowtie.
         </p>
         <img src="squirrel-8064275_960_720.jpg" alt="Squirrel eating" width="64px" height="64px" style="float:left; position:relative; right:10px;"/>
-        <p>
+        <p style="padding:bottom 10px;">
             Squirrel is the smallest in the B-team. He likes to eat and his favorite food is nuts.
         </p>
         <img src="duck-5381071_1280.jpg" alt="Duck's head" width="67px" height="67px" style="float:left; position:relative; right:10px;"/>
-        <p>
+        <p style="padding:bottom 10px;">
             Duck is the largest in the B-team. He usually quacks and walk around. Nobody knows what he is thinking.
         </p>
         <img src="cat-2934720_1280.jpg" alt="Cat sitting" width="69px" height="69px" style="float:left; position:relative; right:10px;"/>
-        <p>
+        <p style="padding:bottom 10px;">
             Cat always looks grumpy but, actually she isn't. Her favorite thing to do is to sit and watch movies.
         </p>
         <div style="display:none; height:30px;">hidden</div>
