--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -1,1 +1,35 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Fish Puzzle</title>
+    </head>
+    <body>
+        <style>
+            section.grid-container{
+                display: grid;
+                background-color: aqua;
+                padding: 5px;
+            }
+            section div.grid-item{
+                background-color: black;
+                padding: 3px;
+            }
+        </style>
+        <section class="grid-container">
+            <img src="puzzle-D.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-A.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-G.jpg" alt="fish" class="grid-item">
+        </section>
+        <section class="grid-container">
+            <img src="puzzle-J.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-B.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-C.jpg" alt="fish" class="grid-item">
+        </section>
+        <section class="grid-container">
+            <img src="puzzle-F.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-I.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-E.jpg" alt="fish" class="grid-item">
+        </section>
+    </body>
+</html>
