--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -16,19 +16,19 @@
             }
         </style>
         <section class="grid-container">
-            <img src="puzzle-D.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-A.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-G.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Da.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Aa.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Ga.jpg" alt="fish" class="grid-item">
         </section>
         <section class="grid-container">
-            <img src="puzzle-J.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-B.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-C.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Ja.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Ba.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Ca.jpg" alt="fish" class="grid-item">
         </section>
         <section class="grid-container">
-            <img src="puzzle-F.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-I.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-E.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Fa.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Ia.jpg" alt="fish" class="grid-item">
+            <img src="puzzle-Ea.jpg" alt="fish" class="grid-item">
         </section>
     </body>
 </html>
