--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -16,19 +16,19 @@
             }
         </style>
         <section class="grid-container">
-            <img src="puzzle-Da.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-Aa.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-Ga.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Da.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Aa.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Ga.jpg" alt="fish" class="grid-item">
         </section>
         <section class="grid-container">
-            <img src="puzzle-Ja.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-Ba.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-Ca.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Ja.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Ba.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Ca.jpg" alt="fish" class="grid-item">
         </section>
         <section class="grid-container">
-            <img src="puzzle-Fa.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-Ia.jpg" alt="fish" class="grid-item">
-            <img src="puzzle-Ea.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Fa.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Ia.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3-Ea.jpg" alt="fish" class="grid-item">
         </section>
     </body>
 </html>
