--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -16,19 +16,19 @@
             }
         </style>
         <section class="grid-container">
-            <img src="puzzle3-Da.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3-Aa.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3-Ga.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Da.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Aa.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Ga.jpg" alt="fish" class="grid-item">
         </section>
         <section class="grid-container">
-            <img src="puzzle3-Ja.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3-Ba.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3-Ca.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Ja.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Ba.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Ca.jpg" alt="fish" class="grid-item">
         </section>
         <section class="grid-container">
-            <img src="puzzle3-Fa.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3-Ia.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3-Ea.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Fa.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Ia.jpg" alt="fish" class="grid-item">
+            <img src="puzzle3_Ea.jpg" alt="fish" class="grid-item">
         </section>
     </body>
 </html>
