--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -13,6 +13,7 @@
             }
             section div.grid-item{
                 padding: 3px;
+                grid: 133px 200px;
             }
         </style>
         <section class="grid-container">
