--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -11,25 +11,27 @@
                 background-color: aqua;
                 padding: 5px;
             }
-            section div.grid-item{
-                padding: 3px;
-                grid: 133px 200px;
-            }
         </style>
         <section class="grid-container">
-            <img src="puzzle3_Da.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3_Aa.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3_Ga.jpg" alt="fish" class="grid-item">
+            <div>
+                <img src="puzzle3_Da.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Aa.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Ga.jpg" alt="fish" class="grid-item">
+            </div>
         </section>
         <section class="grid-container">
-            <img src="puzzle3_Ja.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3_Ba.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3_Ca.jpg" alt="fish" class="grid-item">
+            <div>
+                <img src="puzzle3_Ja.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Ba.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Ca.jpg" alt="fish" class="grid-item">
+            </div>
         </section>
         <section class="grid-container">
-            <img src="puzzle3_Fa.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3_Ia.jpg" alt="fish" class="grid-item">
-            <img src="puzzle3_Ea.jpg" alt="fish" class="grid-item">
+            <div>
+                <img src="puzzle3_Fa.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Ia.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Ea.jpg" alt="fish" class="grid-item">
+            </div>
         </section>
     </body>
 </html>
