--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -8,6 +8,7 @@
         <style>
             section.grid-container{
                 display: grid;
+                width: 612px;
                 background-color: aqua;
                 padding: 5px;
             }
