--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -32,6 +32,7 @@
                 <img src="puzzle3_Fa.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Ia.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Ea.jpg" alt="fish" class="grid-item">
+                <img src="puzzle3_Ha.jpg" alt="fish" style="visibility: hidden;">
             </div>
         </section>
     </body>
