--- a/Root Directory/Puzzle/FishPuzzle.html
+++ b/Root Directory/Puzzle/FishPuzzle.html
@@ -9,25 +9,23 @@
             section.grid-container{
                 display: grid;
                 width: 612px;
+                height: 420px;
                 background-color: aqua;
                 padding: 5px;
             }
         </style>
         <section class="grid-container">
+            <div style="font-size: 5px;">Momoyo Matsumoto  Fish  2024/8/12</div>
             <div>
                 <img src="puzzle3_Da.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Aa.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Ga.jpg" alt="fish" class="grid-item">
             </div>
-        </section>
-        <section class="grid-container">
             <div>
                 <img src="puzzle3_Ja.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Ba.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Ca.jpg" alt="fish" class="grid-item">
             </div>
-        </section>
-        <section class="grid-container">
             <div>
                 <img src="puzzle3_Fa.jpg" alt="fish" class="grid-item">
                 <img src="puzzle3_Ia.jpg" alt="fish" class="grid-item">
