--- a/Root Directory/Scorecards/SportClimbing.html
+++ b/Root Directory/Scorecards/SportClimbing.html
@@ -10,6 +10,7 @@
 
     <body>
         <h2>Sport climbing [speed] scorecards</h2>
+        <section>
         <div>
             <table>
                 <tr>
@@ -44,5 +45,6 @@
                 </tr>
             </table>
         </div>
+        <section/>
     </body>
 </html>
