--- a/Root Directory/Scorecards/SportClimbing.html
+++ b/Root Directory/Scorecards/SportClimbing.html
@@ -10,7 +10,7 @@
 
     <body>
         <h2>Sport climbing [speed] scorecards</h2>
-        <section>
+        <section class="coloring">
         <div>
             <table>
                 <tr>
