--- a/Root Directory/Scorecards/SportClimbing.html
+++ b/Root Directory/Scorecards/SportClimbing.html
@@ -10,7 +10,13 @@
 
     <body>
         <h2>Sport climbing [speed] scorecards</h2>
-        <section class="coloring">
+        <style>
+            table, tr, td {border: 1px solod black;}
+            section div table tbody tr:hover{
+                background-color: aquamarine;
+            }
+        </style>
+        <section>
         <div>
             <table>
                 <tr>
