--- a/Root Directory/Scorecards/SportClimbing.html
+++ b/Root Directory/Scorecards/SportClimbing.html
@@ -15,6 +15,9 @@
             section div table tbody tr:hover{
                 background-color: aquamarine;
             }
+            section div table tbody tr:{
+                background-color: lightblue
+            }
         </style>
         <section>
         <div>
