--- a/Root Directory/Scorecards/SportClimbing.html
+++ b/Root Directory/Scorecards/SportClimbing.html
@@ -15,13 +15,10 @@
             section div table tbody tr:hover{
                 background-color: aquamarine;
             }
-            section div table tbody tr:{
-                background-color: lightblue
-            }
         </style>
         <section>
         <div>
-            <table>
+            <table style="background-color: lightblue;">
                 <tr>
                     <td>Player's Name</td>
                     <td>Attempt 1</td>
