--- a/Root Directory/Scorecards/SportClimbing.html
+++ b/Root Directory/Scorecards/SportClimbing.html
@@ -11,13 +11,14 @@
     <body>
         <h2>Sport climbing [speed] scorecards</h2>
         <style>
+            table, tr, td{border: 1px solid black;}
             section div table tbody tr:hover{
                 background-color: aquamarine;
             }
         </style>
         <section>
         <div>
-            <table style="background-color: lightblue; border: 1px solod black;">
+            <table style="background-color: lightblue;">
                 <tr>
                     <td>Player's Name</td>
                     <td>Attempt 1</td>
