--- a/Root Directory/Scorecards/Soccer.html
+++ b/Root Directory/Scorecards/Soccer.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Soccer scores</title>
+        <!--CSS Files-->
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+        <h2>Soccer scorecards</h2>
+        <style>
+            table, tr, td{border: 1px solid black;}
+            section div table tbody tr:hover{
+                background-color: aquamarine;
+            }
+        </style>
+        <section>
+        <div>
+            <table style="background-color: lightblue;">
+                <tr>
+                    <td>Player's Name</td>
+                    <td>Goal</td>
+                    <td>Block</td>
+                    <td>Assist</td>
+                </tr>
+                <tr>
+                    <td>A</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>B</td>
+                    <td>2</td>
+                    <td>4</td>
+                    <td>0/td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td>0</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>D</td>
+                    <td>0</td>
+                    <td>5</td>
+                    <td>1</td>
+                </tr>
+            </table>
+        </div>
+        <section/>
+    </body>
+</html>
 
