--- a/Root Directory/Scorecards/Swimming.html
+++ b/Root Directory/Scorecards/Swimming.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Swimming Time</title>
+        <!--CSS Files-->
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+        <h2>Swimming scorecards</h2>
+        <style>
+            table, tr, td{border: 1px solid black;}
+            section div table tbody tr:hover{
+                background-color: aquamarine;
+            }
+        </style>
+        <section>
+        <div>
+            <table style="background-color: lightblue;">
+                <tr>
+                    <td>Player's Name</td>
+                    <td>Attempt 1</td>
+                    <td>Attempt 2</td>
+                    <td>Attempt 3</td>
+                </tr>
+                <tr>
+                    <td>A</td>
+                    <td>14sec</td>
+                    <td>13sec</td>
+                    <td>13sec</td>
+                </tr>
+                <tr>
+                    <td>B</td>
+                    <td>12sec</td>
+                    <td>11sec</td>
+                    <td>13sec</td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td>12sec</td>
+                    <td>15sec</td>
+                    <td>12sec</td>
+                </tr>
+                <tr>
+                    <td>D</td>
+                    <td>15sec</td>
+                    <td>16sec</td>
+                    <td>12sec</td>
+                </tr>
+            </table>
+        </div>
+        <section/>
+    </body>
+</html>
 
