--- a/Root Directory/Video/EmbeddingTutorial.html
+++ b/Root Directory/Video/EmbeddingTutorial.html
@@ -9,24 +9,24 @@
     </head>
 
     <body>
-        <p>How to embed videos from Youtube</p>
+        <p id="color_blue">How to embed videos from Youtube</p>
         <h3>Step 1</h3>
-        <img src="screenshot_step_one.png" alt="image isn't available"/>
+        <img src="screenshot_step_one.png" alt="image isn't available" id="classic"/>
         <p>When you embed videos from youtube, you need to use the iframe tag.</p>
         <h3>Step 2</h3>
-        <img src="screenshot_step_two.png" alt="image isn't available"/>
+        <img src="screenshot_step_two.png" alt="image isn't available" id="classic"/>
         <p>Below the video you want to embed, you will find "copy" which is in yellow. Click there.</p>
         <h3>Step 3</h3>
-        <img src="screenshot_step_three.png" alt="image isn't available"/>
+        <img src="screenshot_step_three.png" alt="image isn't available" id="classic"/>
         <p>You will fing "embed" which is in yellow. Click there.</p>
         <h3>Step 4</h3>
-        <img src="screenshot_step_four.png" alt="image isn't available"/>
+        <img src="screenshot_step_four.png" alt="image isn't available" id="classic"/>
         <p>You will see the code of the video. Click "copy" in yellow in the image.</p>
         <h3>Step 5</h3>
-        <img src="screenshot_step_five.png" alt="image isn't available"/>
+        <img src="screenshot_step_five.png" alt="image isn't available" id="classic"/>
         <p>Paste the code inside the iframe tag.</p>
         <h3>Step 6</h3>
-        <img src="screenshot_step_six.png" alt="image isn't available"/>
+        <img src="screenshot_step_six.png" alt="image isn't available" id="classic"/>
         <p>The video will appear on you website.</p>
     </body>
 </html>
