--- a/Root Directory/Video/EmbeddingTutorial.html
+++ b/Root Directory/Video/EmbeddingTutorial.html
@@ -28,5 +28,12 @@
         <h3>Step 6</h3>
         <img src="screenshot_step_six.png" alt="image isn't available" id="classic"/>
         <p>The video will appear on you website.</p>
+        <p>The video used for tutorial</p>
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/aRNqI-xNDcA?si=98uzjXCXKmwCMzz3" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        This video isn't available.</iframe>
     </body>
 </html>
