--- a/Root Directory/Imitation/Dinosaur.html
+++ b/Root Directory/Imitation/Dinosaur.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Penguin</title>
+        <link rel="stylesheet" type="text/css" href="style_imitation.css">
+    </head>
+    <body>
+        <img class="dinosaur" src="dinosaur.jpg" alt="penguins">
+    </body>
+</html>
