--- a/Root Directory/Imitation/Dinosaur.html
+++ b/Root Directory/Imitation/Dinosaur.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Penguin</title>
+        <title>Dinosaur</title>
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
     <body>
-        <img class="dinosaur" src="dinosaur.jpg" alt="penguins">
+        <img class="dinosaur" src="dinosaur.jpg" alt="dinosaur">
     </body>
 </html>
