--- a/Root Directory/Imitation/Dinosaur.html
+++ b/Root Directory/Imitation/Dinosaur.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
     <body>
-        <img class="dinosaur" src="dinosaur.jpg" alt="dinosaur">
+        <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
     </body>
 </html>
