--- a/Root Directory/Imitation/Football.html
+++ b/Root Directory/Imitation/Football.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Football</title>
+        <link rel="stylesheet" type="text/css" href="style_imitation.css">
+    </head>
+    <body>
+        <img class="football" src="football_field.jpg" alt="football field">
+        <img class="tictakto" src="tic-tac-toe.png" alt="tic-tac-toe">
+    </body>
+</html>
