--- a/Root Directory/Imitation/Seagull.html
+++ b/Root Directory/Imitation/Seagull.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Seagull</title>
+        <link rel="stylesheet" type="text/css" href="style_imitation.css">
+    </head>
+    <body>
+        <img class="seagull" src="seagull.png" alt="seagull">
+    </body>
+</html> 
