--- a/Root Directory/Imitation/Theater.html
+++ b/Root Directory/Imitation/Theater.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Butterfly</title>
+        <link rel="stylesheet" type="text/css" href="style_imitation.css">
+    </head>
+    <body>
+        <div class="theater">
+            <p class="stage" style="background-image: url(theater_stage.jpg); color: white; font-size: 30px; text-align: center;">
+                Presenting
+            </p>
+        </div>
+    </body>
+</html> 
