--- a/Root Directory/Imitation/Theater.html
+++ b/Root Directory/Imitation/Theater.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="theater">
-            <p id="stage" style="background-image: url(theater_stage.jpg); color: white; font-size: 15px; text-align: center;">
+            <p style="color: white; font-size: 15px; text-align: center;">
                 Presenting
             </p>
         </div>
