--- a/Root Directory/Imitation/Theater.html
+++ b/Root Directory/Imitation/Theater.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="theater">
-            <p style="color: white; font-size: 15px; text-align: center;">
+            <p style="filter: blur(0px); color: white; font-size: 50px; text-align: center; vertical-align: middle;">
                 Presenting
             </p>
         </div>
