--- a/Root Directory/Imitation/Theater.html
+++ b/Root Directory/Imitation/Theater.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -8,7 +9,7 @@
     </head>
     <body>
         <div class="theater">
-            <p style="filter: blur(0px); color: white; font-size: 50px; text-align: center; vertical-align: middle;">
+            <p id="stage">
                 Presenting
             </p>
         </div>
