--- a/Root Directory/Imitation/Theater.html
+++ b/Root Directory/Imitation/Theater.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -8,6 +7,11 @@
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
     <body>
+        <tr style="text-align: center;">
+            <td>top</td>
+            <td>middle</td>
+            <td>bottom</td>
+        </tr>
         <div class="theater">
             <p id="stage">
                 Presenting
