--- a/Root Directory/Imitation/Football.html
+++ b/Root Directory/Imitation/Football.html
@@ -6,18 +6,9 @@
         <title>Football</title>
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
+
     <body>
-        <style>
-            div{
-                background-image: url(tic-tac-toe.png), url(football_field.jpg);
-                background-repeat: no-repeat;
-                width: 500px;
-                height: 230px;
-            }
-        </style>
-        <div>
-            <img class="tictakto" src="tic-tac-toe.png" alt="tic-tac-toe">
-            <img class="football" src="football_field.jpg" alt="football field">
-        </div>
+        <div id="tiktactoe"></div>
+        <div id="football"></div>
     </body>
 </html>
