--- a/Root Directory/Imitation/Football.html
+++ b/Root Directory/Imitation/Football.html
@@ -8,6 +8,6 @@
     </head>
 
     <body>
-        <div id="football" "tiktactoe"></div>
+        <div id="football" id="tiktactoe"></div>
     </body>
 </html>
