--- a/Root Directory/Imitation/Football.html
+++ b/Root Directory/Imitation/Football.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
-        <div id="football" id="tiktactoe"></div>
+        <div>id="football" </div> 
+        <div>id="tiktactoe" </div>
     </body>
 </html>
