--- a/Root Directory/Imitation/Football.html
+++ b/Root Directory/Imitation/Football.html
@@ -6,8 +6,7 @@
         <title>Football</title>
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
-
     <body>
-       <div id="football"></div>
+        <img class="football" scr="football_field.jpg" alt="football"> 
     </body>
 </html>
